Création de la méthode ajouterTuilesGraphiques.
Permet d'ajouter un affichage dans la grille pour chaque tuile du
plateau.